[package]
name = "chronicle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
fd-lock = "4.0.4"
git2 = { version = "0.20.4", default-features = false, features = ["vendored-libgit2"] }
hex = "0.4.3"
rand = "0.10.0"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
tempfile = "3.20.0"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "xxh64"] }

# Optional at-rest encryption (AES-256-GCM) enabled when `CHRONICLE_KEY` is set.
aes-gcm = "0.10.3"
argon2 = "0.5.3"
sha2 = "0.10.9"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
